--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
          padding: 0 !important;
          }
       </style>
-      <link rel="stylesheet" id="wp-pagenavi-css" href="./Small Beer Press_files/pagenavi-css.css" type="text/css" media="all">
-      <link rel="stylesheet" id="wp_dlmp_styles-css" href="./Small Beer Press_files/styles.css" type="text/css" media="all">
+      <link rel="stylesheet" id="wp-pagenavi-css" href="Small Beer Press_files/pagenavi-css.css" type="text/css" media="all">
+      <link rel="stylesheet" id="wp_dlmp_styles-css" href="Small Beer Press_files/styles.css" type="text/css" media="all">
       <link rel="https://api.w.org/" href="http://smallbeerpress.com/wp-json/">
       <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://smallbeerpress.com/xmlrpc.php?rsd">
       <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://smallbeerpress.com/wp-includes/wlwmanifest.xml">
